--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -241,7 +241,7 @@ section {
 }
 
 .section_subtitle {
-	font-size: 14px;
+	font-size: 20px;
 	font-weight: 600;
 	color: #937c6f;
 	text-transform: uppercase;
@@ -552,6 +552,7 @@ section {
 }
 
 .home_slider_background {
+	overflow: hidden;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -904,8 +905,6 @@ section {
 	margin-top: 98px;
 }
 
-
-
 .product_image {
 	width: 100%;
 }
@@ -997,7 +996,7 @@ section {
 }
 
 .product_name a {
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: 600;
 	color: #232323;
 	-webkit-transition: all 200ms ease;
@@ -1012,7 +1011,7 @@ section {
 }
 
 .product_price {
-	font-size: 24px;
+	font-size: 18px;
 	font-weight: 600;
 	color: #8a8a8a;
 	margin-top: 0px;
@@ -1307,6 +1306,156 @@ section {
 
 .gallery_slider_container {
 	margin-top: 55px;
+}
+
+/*********************************
+News
+*********************************/
+
+.cta-100 {
+	/* margin-top: 10px; */
+	/* padding-left: 8%; */
+	padding-top: 3%;
+}
+
+.col-md-4 {
+	padding-bottom: 20px;
+}
+
+.white {
+	color: #fff !important;
+}
+
+.mt {
+	float: left;
+	margin-top: -20px;
+	padding-top: 20px;
+}
+
+.bg-blue-ui {
+	background-color: #708198 !important;
+}
+
+figure img {
+	width: 300px;
+}
+
+#blogCarousel {
+	padding-bottom: 100px;
+}
+
+.blog .carousel-indicators {
+	left: 0;
+	top: -50px;
+	height: 50%;
+}
+
+/* The colour of the indicators */
+
+.blog .carousel-indicators li {
+	background: #708198;
+	border-radius: 50%;
+	width: 8px;
+	height: 8px;
+}
+
+.blog .carousel-indicators .active {
+	background: #0fc9af;
+}
+
+.item-carousel-blog-block {
+	outline: medium none;
+	padding: 15px;
+}
+
+.item-box-blog {
+	border: 1px solid #dadada;
+	text-align: center;
+	z-index: 4;
+	padding: 20px;
+}
+
+.item-box-blog-image {
+	position: relative;
+}
+
+.item-box-blog-image figure img {
+	width: 300px;
+	height: 200px  ;
+}
+.center-cropped {
+  object-fit: cover; /* Do not scale the image */
+  object-position: center; /* Center the image within the element */
+  height: 300px;
+  width: 300px;
+}
+.item-box-blog-date {
+	position: absolute;
+	z-index: 5;
+	padding: 4px 20px;
+	top: -20px;
+	right: 8px;
+	background-color: #41cb52;
+}
+
+.item-box-blog-date span {
+	color: #fff;
+	display: block;
+	text-align: center;
+	line-height: 1.2;
+}
+
+.item-box-blog-date span.mon {
+	font-size: 18px;
+}
+
+.item-box-blog-date span.day {
+	font-size: 16px;
+}
+
+.item-box-blog-body {
+	padding: 10px;
+}
+
+.item-heading-blog a h5 {
+	margin: 0;
+	line-height: 1;
+	text-decoration: none;
+	transition: color 0.3s;
+}
+
+.item-box-blog-heading a {
+	text-decoration: none;
+}
+
+.item-box-blog-data p {
+	font-size: 13px;
+}
+
+.item-box-blog-data p i {
+	font-size: 12px;
+}
+
+.item-box-blog-text {
+	max-height: 100px;
+	overflow: hidden;
+}
+
+.mt-10 {
+	float: left;
+	margin-top: -10px;
+	padding-top: 10px;
+}
+
+.btn.bg-blue-ui.white.read {
+	cursor: pointer;
+	padding: 4px 20px;
+	float: left;
+	margin-top: 10px;
+}
+
+.btn.bg-blue-ui.white.read:hover {
+	box-shadow: 0px 5px 15px inset #4d5f77;
 }
 
 /*********************************
